# ImgProcess

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/img_process/: CMakeLists.txt  main.cpp
src/img_process_exe/: main.cpp
src/img_process_lib/: CMakeLists.txt
src/img_process_lib/include/: black_white_img.h  convert_img.h  folders.h  images_processor.h  mp_black_white_img.h  mp_imgs_processor.h  mt_imgs_processor.h  multi_process_processor.h  multi_thread_processor.h  shared_data.h  time_measure.h
src/img_process_lib/src/: black_white_img.cpp  convert_img.cpp  mp_black_white_img.cpp  mp_imgs_processor.cpp  mt_imgs_processor.cpp  multi_process_processor.cpp  shared_data.cpp  time_measure.cpp
src/some_lib/: CMakeLists.txt
src/some_lib/include/: black_white_img.h  bw_image.h  convert_img.h  image_math.h  images_processor.h  multi_thread_processor.h  time_measure.h  x_on_image.h
src/some_lib/src/: black_white_img.cpp  bw_image.cpp  convert_img.cpp  image_math.cpp  images_processor.cpp  time_measure.cpp  x_on_image.cpp
tests/: CMakeLists.txt  black_white_img_test.cpp  bw_image_test.cpp  image_math_test.cpp  images_processor_test.cpp  mp_img_processor_test.cpp  mt_imgs_processor_test.cpp  multi_process_processor_test.cpp  multi_thread_processor_test.cpp  sample_exe.cpp  some_lib_test.cpp  time_measure_test.cpp  x_on_image_test.cpp
